# rust_shell

./: Cargo.toml  README.md  errors.txt  file-1  history.txt  test.md  test.txt  test2.txt  testing.txt
src/: bit_flags.rs  builtin.rs  command_input.rs  completion_helper.rs  execute.rs  main.rs  parser.rs  redirection.rs  shell.rs  utils.rs
