[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = "4.5.57"
is_executable = "1.0.5"
thiserror = "1.0.38"
log = "0.4.29"                             # error handling
rustyline = "17.0.2"
os_pipe = "1.2.3"
